--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,8 @@ pymongo==4.6.0
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 aiosqlite==0.19.0
+supabase>=2.0.0
+postgrest>=0.13.0
 
 # AWS
 boto3==1.29.0
