--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,9 @@ sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 aiosqlite==0.19.0
 
+# Supabase
+supabase==2.0.0
+
 # AWS
 boto3==1.29.0
 botocore==1.32.0
