--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ Thumbs.db
 
 # Node modules (if frontend uses npm)
 node_modules/
-package-lock.json
+# package-lock.json should be committed for reproducible installs
 
 # AWS
 *.pem
