--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,19 +10,19 @@ anthropic==0.39.0
 
 # Database Drivers
 sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
+psycopg2-binary>=2.9.11
 aiosqlite==0.19.0
 
-# Supabase
-supabase==2.0.0
+# Supabase (temporarily disabled to resolve httpx/httpcore conflicts on Python 3.14)
+# supabase==2.0.0
 
 # AWS
 boto3==1.29.0
 botocore==1.32.0
 
 # Schema & Validation
-pydantic==2.5.0
-pydantic-settings==2.0.0
+pydantic>=2.9.0
+pydantic-settings>=2.6.0
 jsonschema==4.20.0
 
 # Visualization
@@ -31,7 +31,8 @@ graphviz==0.20.1
 # Utilities
 python-dotenv==1.0.0
 pyyaml==6.0.1
-httpx==0.25.1
+# Pin httpx to 0.27.x to keep Anthropic client compatibility
+httpx>=0.27.0,<0.28.0
 loguru==0.7.2
 
 # Testing
