feat(frontend): auto AI suggestions toggle with Stop Generating + safe cancellation (abort + timeout)
- Add Stop Generating button and toggle via isAutoSuggesting
- Abort in-flight suggestion fetches using AbortController
- Clear pending auto-fetch timeouts; prevent post-stop updates
- Preserve schema while clearing suggestion UI
- Update button copy and styles

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,7 +14,7 @@ psycopg2-binary>=2.9.11
 aiosqlite==0.19.0
 
 # Supabase (temporarily disabled to resolve httpx/httpcore conflicts on Python 3.14)
-# supabase==2.0.0
+supabase
 
 # AWS
 boto3==1.29.0
